MESSAGE(STATUS "Now we get into the server dir to compile the bin  " ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE(${PROJECT_SOURCE_DIR}/src/variables.txt)

#SET(EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})
SET(LINK_LIBS libwrap.a)
SET(SRC_LIST server.c)

INCLUDE_DIRECTORIES(${INC_DIR})
LINK_DIRECTORIES(${LIB_DIR})

MESSAGE(STATUS "We link lib:  " ${LINK_LIBS} "from the" ${LIB_DIR} )
ADD_EXECUTABLE(server ${SRC_LIST})
TARGET_LINK_LIBRARIES(server ${LINK_LIBS})
